--- a/i.html
+++ b/i.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, odio consequuntur nobis a deleniti beatae deserunt at eligendi voluptas quaerat officia et amet voluptates culpa voluptate quae recusandae perferendis perspiciatis.</p>
+    <p style="color: red;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, odio consequuntur nobis a deleniti beatae deserunt at eligendi voluptas quaerat officia et amet voluptates culpa voluptate quae recusandae perferendis perspiciatis.</p>
 </body>
 </html>
